prevent select zoom on mobile

--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ select{
 }
 
 @media only screen and (max-width: 1000px) {
-    .visible{
-        width:100%;
-        height:width;
+    select{
+        width: 100%;
+        height: width;
+        font-size: 50px;
     }
+
   }
